# libcork

./: .gitignore  CMakeLists.txt
cmake/: FindCTargets.cmake
include/libcork/config/: linux.h
include/libcork/core/: attributes.h  byte-order.h  hash.h
src/: CMakeLists.txt
src/cork-hash/: cork-hash.c
src/libcork/core/: timestamp.c
src/libcork/posix/: env.c  subprocess.c
